--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^15.2.3",
+    "@angular/common": "^16.1.3",
     "@angular/core": "^15.2.3",
     "@angular/forms": "^15.2.3",
     "@angular/platform-browser": "^15.2.3",
@@ -44,9 +44,10 @@
     "@ionic-native/splash-screen": "^5.33.1",
     "@ionic-native/status-bar": "^5.33.1",
     "@ionic-native/three-dee-touch": "^5.33.1",
-    "@ionic/angular": "^6.6.2",
+    "@ionic/angular": "^7.1.1",
     "@ionic/cli": "^6.20.9",
     "@ionic/cordova-builders": "^8.0.0",
+    "@ionic/core": "^7.1.1",
     "@ionic/storage": "^2.3.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -57,7 +58,7 @@
     "chartjs-plugin-annotation": "^1.3.0",
     "chartjs-plugin-streaming": "^2.0.0",
     "chartjs-plugin-zoom": "^1.2.0",
-    "cordova-android-support-gradle-release": "^3.0.1",
+    "cordova-android-support-gradle-release": "^1.4.6",
     "cordova-plugin-3dtouch": "^1.3.8",
     "cordova-plugin-android-permissions": "1.1.2",
     "cordova-plugin-appminimize": "^1.0.1",
@@ -81,7 +82,8 @@
     "ngx-gauge": "^7.0.0",
     "ngx-stars": "^1.6.4",
     "postcss": "^8.3.5",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.5.0",
+    "swiper": "^9.4.1",
     "tslib": "^2.0.0",
     "xlsx": "^0.17.4",
     "zone.js": "~0.11.4"
@@ -94,7 +96,7 @@
     "@angular/compiler": "^15.2.3",
     "@angular/compiler-cli": "^15.2.3",
     "@angular/language-service": "^15.2.3",
-    "@ionic/angular-toolkit": "^8.0.0",
+    "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/lodash": "^4.14.178",
@@ -102,7 +104,7 @@
     "@wisdomgarden/cordova-plugin-filepath": "git+https://github.com/wisdom-garden/cordova-plugin-filepath.git",
     "cordova-android": "^10.1.2",
     "cordova-ios": "^6.3.0",
-    "cordova-plugin-add-swift-support": "^2.0.2",
+    "cordova-plugin-add-swift-support": "^1.7.2",
     "cordova-plugin-advanced-http": "^3.3.1",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
@@ -136,18 +138,18 @@
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "^6.3.9",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage-istanbul-reporter": "^3.0.1",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "protractor": "^7.0.0",
     "skwas-cordova-plugin-datetimepicker": "^2.1.2",
-    "stylelint": "^13.12.0",
+    "stylelint": "^15.9.0",
     "stylelint-config-standard": "^20.0.0",
     "ts-node": "~8.3.0",
     "ts-proto": "^1.122.0",
-    "tslint": "~6.1.0",
+    "tslint": "^4.5.1",
     "typescript": "^4.9.4",
     "webpack-subresource-integrity": "^1.5.2"
   },
